# embedez

./: .gitignore  README.md  pm2.json  pyproject.toml  run.py
embedez/: main.py  utils.py
